removed max-height on hero (was causing overlap issues)

--- a/_sass/_style-index.scss
+++ b/_sass/_style-index.scss
@@ -66,7 +66,7 @@
     }
 
     /* HERO */
-    .hero { height: 85vh; min-height: 580px; max-height: 780px; padding-top: 68px; display: grid; grid-template-columns: 1fr 1fr; }
+    .hero {  min-height: 580px; padding-top: 68px; display: grid; grid-template-columns: 1fr 1fr; }
     .hero-left {
       display: flex; flex-direction: column; justify-content: center;
       padding: 6rem 5rem 6rem 6rem;
